WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138435
Select Data Detectors results instead of just highlighting them
https://bugs.webkit.org/show_bug.cgi?id=138435
Summary
Select Data Detectors results instead of just highlighting them
Tim Horton
Reported
2014-11-05 13:07:16 PST
Select Data Detectors results instead of just highlighting them
Attachments
Patch
(8.51 KB, patch)
2014-11-05 13:07 PST
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-05 13:07:39 PST
Created
attachment 241052
[details]
Patch
Tim Horton
Comment 2
2014-11-05 13:13:34 PST
http://trac.webkit.org/changeset/175637
Tim Horton
Comment 3
2014-11-05 13:13:57 PST
<
rdar://problem/18877675
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug