Source/WebKit2/UIProcess/WebPageProxy.h
@@ -928,7 +928,7 @@ public:
 
     WebHitTestResult* lastMouseMoveHitTestResult() const { return m_lastMouseMoveHitTestResult.get(); }
     void performActionMenuHitTestAtLocation(WebCore::FloatPoint);
-    void selectLookupTextAtLocation(WebCore::FloatPoint);
+    void selectLastActionMenuRange();
 #endif
 
 #if PLATFORM(EFL) && HAVE(ACCESSIBILITY) && defined(HAVE_ECORE_X)
